--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.hiepnn.mydemoapplication.activities.MainActivity">
+    tools:context="com.baseapp.hiepnn.mybaseproject.activities.MainActivity">
 
     <FrameLayout
         android:id="@+id/container"
