--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -5,7 +5,7 @@
     <FrameLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.hiepnn.mydemoapplication.fragments.FirstFragment"
+        tools:context="com.baseapp.hiepnn.mybaseproject.fragments.FirstFragment"
         tools:showIn="@layout/activity_main">
 
         <android.support.design.widget.AppBarLayout
