--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,4 +22,8 @@
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main2_drawer" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="he he" />
 </android.support.v4.widget.DrawerLayout>
