--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="testconflic"/>
+        android:text="testconflictttttt"/>
 
 </android.support.v4.widget.DrawerLayout>
