--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="testconflictttttt"/>
+        android:text="testcondvbvbvbhhh"/>
 
     <TextView
         android:layout_width="wrap_content"
