--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,5 +29,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="he he" />
+        android:text="hihihihihihihihihihi" />
 </android.support.v4.widget.DrawerLayout>
