build base request

--- a/app/src/main/res/layout/layout_base_fragment.xml
+++ b/app/src/main/res/layout/layout_base_fragment.xml
@@ -8,7 +8,8 @@
         style="@android:style/Widget.Holo.ProgressBar.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:indeterminateDrawable="@drawable/gtu_mca_progress_indeterminate3" />
 
     <FrameLayout
         android:id="@+id/initialNetworkError"
