--- a/app/src/main/res/layout/layout_cover_network_loading.xml
+++ b/app/src/main/res/layout/layout_cover_network_loading.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/coverNetworkLoading"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
@@ -13,6 +12,7 @@
         style="@android:style/Widget.Holo.ProgressBar.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:indeterminateDrawable="@drawable/gtu_mca_progress_indeterminate3" />
 
 </LinearLayout>
