--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -5,25 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".fragments.FirstFragment">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_hello"
+        <ListView
+            android:id="@+id/lv1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="The first fragment" />
+            android:layout_height="wrap_content"/>
 
         <Button
-            android:id="@+id/btnFrgSec"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tv_hello"
-            android:text="Second Fragment" />
-    </RelativeLayout>
+            android:text="Cek selected" />
+    </LinearLayout>
 </FrameLayout>
