--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -13,7 +13,8 @@
         <ListView
             android:id="@+id/lv1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:visibility="gone"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btn"
